add orders module with controller, DTOs, and environment configuration

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ PORT=3000
 
 PRODUCT_MICRO_SERVICES_HOST=localhost
 PRODUCT_MICRO_SERVICES_PORT=3001
+
+ORDER_MICRO_SERVICES_HOST=localhost
+ORDER_MICRO_SERVICES_PORT=3002
