--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ PRODUCT_MICRO_SERVICES_PORT=3001
 
 ORDER_MICRO_SERVICES_HOST=localhost
 ORDER_MICRO_SERVICES_PORT=3002
+
+NATS_SERVER="nats://localhost:4222"
